// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a basic table table 1`] = `
<div
  className="dataTableContainer"
>
  <div
    className="tableContainer"
    style={
      Object {
        "height": undefined,
      }
    }
  >
    <table
      className="table"
    >
      <thead
        className=""
      >
        <tr>
          <th
            colSpan={1}
          >
            <div>
              name
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              house
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              region
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              sigil
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              isAlive
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Eddard
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Catelyn
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Jon Snow
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Rickon
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Cercei
          </td>
          <td>
            Lannister
          </td>
          <td>
            Westerlands
          </td>
          <td>
            Golden Lion
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Sansa
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Arya
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Bran
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Joffrey
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Myrcella
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Tommen
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders a table table with manual pagination 1`] = `
<div
  className="dataTableContainer"
>
  <div
    className="tableContainer"
    style={
      Object {
        "height": undefined,
      }
    }
  >
    <table
      className="table"
    >
      <thead
        className=""
      >
        <tr>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              name
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              house
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              region
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              sigil
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              isAlive
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Eddard
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Catelyn
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Jon Snow
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Rickon
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Cercei
          </td>
          <td>
            Lannister
          </td>
          <td>
            Westerlands
          </td>
          <td>
            Golden Lion
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Sansa
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Arya
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Bran
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Joffrey
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Myrcella
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Tommen
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="pagination"
  >
    <div
      className="paginationInfo"
    >
      Showing 1-10 of 100 items
    </div>
    <div
      className="paginationNav"
    >
      <div
        className="pagenationSelect"
      >
        <div
          className="wrapper select"
          style={
            Object {
              "--formField-maxLength": undefined,
            }
          }
        >
          <div
            className="inputWrapper"
          >
            <label
              className="label"
              htmlFor="123e4567-e89b-12d3-a456-426655440005"
            />
            <select
              className="input"
              id="123e4567-e89b-12d3-a456-426655440005"
              onChange={[Function]}
              value={10}
            >
              <option
                value="10"
              >
                10
              </option>
              <option
                value="20"
              >
                20
              </option>
              <option
                value="30"
              >
                30
              </option>
              <option
                value="40"
              >
                40
              </option>
              <option
                value="50"
              >
                50
              </option>
            </select>
            <span
              className="postfix"
            >
              <svg
                className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
                data-testid="arrowDown"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  className=""
                  d="M328.677 353.767c-8.333-8.309-19.249-12.453-30.16-12.433-10.876 0.019-21.745 4.175-30.042 12.466s-12.456 19.153-12.475 30.021c-0.019 10.918 4.139 21.842 12.475 30.172l213.334 213.51c8.337 8.333 19.264 12.497 30.191 12.497s21.854-4.164 30.191-12.497l213.333-213.33c8.337-8.33 12.497-19.254 12.476-30.172-0.021-10.868-4.177-21.729-12.476-30.021-8.294-8.291-19.166-12.447-30.042-12.466-10.91-0.019-21.828 4.125-30.161 12.433l-183.322 182.979-183.323-183.159z"
                />
              </svg>
            </span>
          </div>
        </div>
        <span
          className="paginationSelectLabel"
        >
          per page
        </span>
      </div>
      <div
        className="paginationButtons"
      >
        <button
          aria-label="arrowLeft"
          className="button base onlyIcon subtle secondary disabled"
          disabled={true}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
            data-testid="arrowLeft"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className=""
              d="M648.9 673.988c8.307 8.333 12.454 19.251 12.433 30.161-0.021 10.876-4.177 21.747-12.467 30.042-8.29 8.299-19.153 12.454-30.020 12.476-10.918 0.021-21.841-4.139-30.17-12.476l-213.513-213.333c-8.331-8.337-12.497-19.264-12.497-30.191s4.166-21.854 12.497-30.191l213.33-213.334c8.333-8.336 19.255-12.495 30.174-12.475 10.867 0.019 21.73 4.177 30.020 12.475s12.446 19.166 12.467 30.042c0.017 10.911-4.126 21.828-12.433 30.16l-182.98 183.323 183.159 183.322z"
            />
          </svg>
          <span
            className="base extraBold small uppercase"
          />
        </button>
        <button
          aria-label="arrowRight"
          className="button base onlyIcon subtle secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
            data-testid="arrowRight"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className=""
              d="M375.1 673.988c-8.309 8.333-12.453 19.251-12.433 30.161 0.019 10.876 4.175 21.747 12.466 30.042 8.291 8.299 19.153 12.454 30.021 12.476 10.918 0.021 21.841-4.139 30.17-12.476l213.513-213.333c8.333-8.337 12.497-19.264 12.497-30.191s-4.164-21.854-12.497-30.191l-213.329-213.334c-8.333-8.336-19.255-12.495-30.173-12.475-10.868 0.019-21.729 4.177-30.021 12.475s-12.447 19.166-12.466 30.042c-0.019 10.911 4.125 21.828 12.433 30.16l182.979 183.323-183.159 183.322z"
            />
          </svg>
          <span
            className="base extraBold small uppercase"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a table table with manual sorting 1`] = `
<div
  className="dataTableContainer"
>
  <div
    className="tableContainer"
    style={
      Object {
        "height": undefined,
      }
    }
  >
    <table
      className="table"
    >
      <thead
        className=""
      >
        <tr>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              name
              <svg
                className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC _2azt9Jt0fRUQn8YEtWXIl3"
                data-testid="longArrowUp"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  className="_1R4_alABGZICCj4KPfBOIa"
                  d="M316.34 554.667l110.327 110.327c16.661 16.661 16.661 43.678 0 60.339s-43.677 16.661-60.34 0l-183.164-183.164c-16.662-16.661-16.662-43.678 0-60.339l183.164-183.164c16.662-16.663 43.677-16.663 60.34 0s16.661 43.677 0 60.34l-110.327 110.327h494.327c23.565 0 42.667 19.102 42.667 42.667s-19.102 42.667-42.667 42.667h-494.327z"
                />
              </svg>
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              house
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              region
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              sigil
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              isAlive
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Eddard
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Catelyn
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Jon Snow
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Rickon
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Cercei
          </td>
          <td>
            Lannister
          </td>
          <td>
            Westerlands
          </td>
          <td>
            Golden Lion
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Sansa
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Arya
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Bran
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Joffrey
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Myrcella
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Tommen
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders a table table with pagination 1`] = `
<div
  className="dataTableContainer"
>
  <div
    className="tableContainer"
    style={
      Object {
        "height": undefined,
      }
    }
  >
    <table
      className="table"
    >
      <thead
        className=""
      >
        <tr>
          <th
            colSpan={1}
          >
            <div>
              name
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              house
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              region
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              sigil
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div>
              isAlive
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Eddard
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Catelyn
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Jon Snow
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Rickon
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Cercei
          </td>
          <td>
            Lannister
          </td>
          <td>
            Westerlands
          </td>
          <td>
            Golden Lion
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Sansa
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Arya
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Bran
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="pagination"
  >
    <div
      className="paginationInfo"
    >
      Showing 1-10 of 13 items
    </div>
    <div
      className="paginationNav"
    >
      <div
        className="pagenationSelect"
      >
        <div
          className="wrapper select"
          style={
            Object {
              "--formField-maxLength": undefined,
            }
          }
        >
          <div
            className="inputWrapper"
          >
            <label
              className="label"
              htmlFor="123e4567-e89b-12d3-a456-426655440001"
            />
            <select
              className="input"
              id="123e4567-e89b-12d3-a456-426655440001"
              onChange={[Function]}
              value={10}
            >
              <option
                value="10"
              >
                10
              </option>
              <option
                value="20"
              >
                20
              </option>
              <option
                value="30"
              >
                30
              </option>
            </select>
            <span
              className="postfix"
            >
              <svg
                className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
                data-testid="arrowDown"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  className=""
                  d="M328.677 353.767c-8.333-8.309-19.249-12.453-30.16-12.433-10.876 0.019-21.745 4.175-30.042 12.466s-12.456 19.153-12.475 30.021c-0.019 10.918 4.139 21.842 12.475 30.172l213.334 213.51c8.337 8.333 19.264 12.497 30.191 12.497s21.854-4.164 30.191-12.497l213.333-213.33c8.337-8.33 12.497-19.254 12.476-30.172-0.021-10.868-4.177-21.729-12.476-30.021-8.294-8.291-19.166-12.447-30.042-12.466-10.91-0.019-21.828 4.125-30.161 12.433l-183.322 182.979-183.323-183.159z"
                />
              </svg>
            </span>
          </div>
        </div>
        <span
          className="paginationSelectLabel"
        >
          per page
        </span>
      </div>
      <div
        className="paginationButtons"
      >
        <button
          aria-label="arrowLeft"
          className="button base onlyIcon subtle secondary disabled"
          disabled={true}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
            data-testid="arrowLeft"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className=""
              d="M648.9 673.988c8.307 8.333 12.454 19.251 12.433 30.161-0.021 10.876-4.177 21.747-12.467 30.042-8.29 8.299-19.153 12.454-30.020 12.476-10.918 0.021-21.841-4.139-30.17-12.476l-213.513-213.333c-8.331-8.337-12.497-19.264-12.497-30.191s4.166-21.854 12.497-30.191l213.33-213.334c8.333-8.336 19.255-12.495 30.174-12.475 10.867 0.019 21.73 4.177 30.020 12.475s12.446 19.166 12.467 30.042c0.017 10.911-4.126 21.828-12.433 30.16l-182.98 183.323 183.159 183.322z"
            />
          </svg>
          <span
            className="base extraBold small uppercase"
          />
        </button>
        <button
          aria-label="arrowRight"
          className="button base onlyIcon subtle secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
            data-testid="arrowRight"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className=""
              d="M375.1 673.988c-8.309 8.333-12.453 19.251-12.433 30.161 0.019 10.876 4.175 21.747 12.466 30.042 8.291 8.299 19.153 12.454 30.021 12.476 10.918 0.021 21.841-4.139 30.17-12.476l213.513-213.333c8.333-8.337 12.497-19.264 12.497-30.191s-4.164-21.854-12.497-30.191l-213.329-213.334c-8.333-8.336-19.255-12.495-30.173-12.475-10.868 0.019-21.729 4.177-30.021 12.475s-12.447 19.166-12.466 30.042c-0.019 10.911 4.125 21.828 12.433 30.16l182.979 183.323-183.159 183.322z"
            />
          </svg>
          <span
            className="base extraBold small uppercase"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a table table with sorting enable 1`] = `
<div
  className="dataTableContainer"
>
  <div
    className="tableContainer"
    style={
      Object {
        "height": undefined,
      }
    }
  >
    <table
      className="table"
    >
      <thead
        className=""
      >
        <tr>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              name
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              house
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              region
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              sigil
            </div>
          </th>
          <th
            colSpan={1}
          >
            <div
              className="cursor-pointer select-none"
              onClick={[Function]}
            >
              isAlive
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Eddard
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Catelyn
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Jon Snow
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Rickon
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Robert
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Cercei
          </td>
          <td>
            Lannister
          </td>
          <td>
            Westerlands
          </td>
          <td>
            Golden Lion
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Sansa
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Arya
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Bran
          </td>
          <td>
            Stark
          </td>
          <td>
            North
          </td>
          <td>
            Direwolf
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Joffrey
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            No
          </td>
        </tr>
        <tr>
          <td>
            Myrcella
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
        <tr>
          <td>
            Tommen
          </td>
          <td>
            Baratheon
          </td>
          <td>
            Stormlands
          </td>
          <td>
            Black Stag
          </td>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
